Archive2/3c/5a63feacd2f340/output
main.cpp:14:7: error: use of deleted function 'Y::Y(const Y&)'
 Y b = a;
       ^
main.cpp:9:5: note: 'Y::Y(const Y&)' is implicitly deleted because the default definition would be ill-formed:
     Y(Y const&)= default;
     ^
main.cpp:9:5: error: copying non-static data member 'X&& Y::x' of rvalue reference type
